syntax = "proto3";

option csharp_namespace = "DemoProject.Web.Protobufs.V1";

package v1;

service FundData {
	rpc GetAllFunds (GetAllFundRequest) returns (stream GetAllFundResponse);
}

message GetAllFundRequest {

}

message GetAllFundResponse {
	string Fund = 1;
	string FundDesc = 2;
}
